--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,7 +74,7 @@ table {
   border-radius: 0.25rem;
   max-height: 10rem;
   overflow-y: scroll; }
-  .log-screen p {
+  .log-screen div {
     font-size: 0.8rem;
     padding: 0;
     margin: 0; }
