--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -39,3 +39,10 @@
 
 .hide-log
   display: none
+
+.users
+  font-size: 0.8rem
+  font-family: monospace
+  li
+    padding: 0.2rem
+    color: olivedrab
